--- a/soundAbsorbtion.html
+++ b/soundAbsorbtion.html
@@ -16,7 +16,24 @@
   <a href="whatIsSound.html">What Is Sound</a>
   <a href="soundAbsorbtion.html">Sound Absorption</a>
   <hr>
-  <p>How does sound interact with other things?</p>
-  test
+  <p>How does sound interact with other things? How can we get rid of sound? Why do we need to get rid of sound? All this and more ahead.</p>
+  <hr>
+  <h3>Sound V Materials sound absorbtion test:</h3>
+  <ol>
+    <li>Glass</li>
+    <li>Water</li>
+    <li>Foam</li>
+  </ol>
+  <p>Let's explaine how these materials work 1 by 1 to see wich is the best at absorbing sound.</p>
+  <p>Starting with glass, this is very bad at absorbing sound. making sound waves and glass act a little like;</p>
+  <marquee behavior="alternate" direction="" scrollamount="21">this</marquee>
+  <p>Becuase the glass is smooth and hard. the sound cant transfer its energy to the glass.</p>
+  <p>Next, water. This material is reletevly good at absorbing sound. this is due to the fact that water is a liquid. this means that the surface is more easally capibal of vibrating and thusly can steal some of the energy from the sound causing a quiter enviroment. letting sound go from</p>
+<small>This to</small>
+  <p> </p>
+<sub>This</sub>
+  <p>Finnaly, foam. This material is very good at absorbing sound. This is due to the foams squishyneess and its holes. The fact that the foam is squishy so it can accept energy from the sound. Seconly, the holes in the foam allow for sound to get trapped as it slowly looses energy.</p>
+<hr>
+  <h3>why do we need to get rid of sound</h3>
 </body>
 </html>
