--- a/soundAbsorbtion.html
+++ b/soundAbsorbtion.html
@@ -29,11 +29,13 @@
   <marquee behavior="alternate" direction="" scrollamount="21">this</marquee>
   <p>Becuase the glass is smooth and hard. the sound cant transfer its energy to the glass.</p>
   <p>Next, water. This material is reletevly good at absorbing sound. this is due to the fact that water is a liquid. this means that the surface is more easally capibal of vibrating and thusly can steal some of the energy from the sound causing a quiter enviroment. letting sound go from</p>
-<small>This to</small>
+<b>This to</b>
   <p> </p>
 <sub>This</sub>
   <p>Finnaly, foam. This material is very good at absorbing sound. This is due to the foams squishyneess and its holes. The fact that the foam is squishy so it can accept energy from the sound. Seconly, the holes in the foam allow for sound to get trapped as it slowly looses energy.</p>
 <hr>
-  <h3>why do we need to get rid of sound</h3>
+  <h3>Where is sound absorbtion good</h3>
+  <p>While Sound can be quite useful we dont want it bouncing around all the time, but when is that time. Well, ill tell you when we neeed to use sound absorbtion.</p>
+  <p>Here are soem cases were sound </p>
 </body>
 </html>
