--- a/soundAbsorbtion.html
+++ b/soundAbsorbtion.html
@@ -15,6 +15,7 @@
   <a href="index.html">Home</a>
   <a href="whatIsSound.html">What Is Sound</a>
   <a href="soundAbsorbtion.html">Sound Absorption</a>
+  <a href="materials.html">Materials</a>
   <hr>
   <p>How does sound interact with other things? How can we get rid of sound? Why do we need to get rid of sound? All this and more ahead.</p>
   <hr>
@@ -35,7 +36,11 @@
   <p>Finnaly, foam. This material is very good at absorbing sound. This is due to the foams squishyneess and its holes. The fact that the foam is squishy so it can accept energy from the sound. Seconly, the holes in the foam allow for sound to get trapped as it slowly looses energy.</p>
 <hr>
   <h3>Where is sound absorbtion good</h3>
-  <p>While Sound can be quite useful we dont want it bouncing around all the time, but when is that time. Well, ill tell you when we neeed to use sound absorbtion.</p>
-  <p>Here are soem cases were sound </p>
+  <p>While Sound bouncing can be quite useful we dont want it bouncing around all the time, but when is that time. Well, ill tell you when we neeed to use sound absorbtion.</p>
+ <ol>
+   <li>Recording studios, an echo is bad for clear sound</li>
+    <li>Theators, messy sound makes it harder for audiences to hear</li>
+   <li>Clasrooms, If students cant hear clearly</li>
+ </ol>
 </body>
 </html>
