--- a/whatIsSound.html
+++ b/whatIsSound.html
@@ -16,6 +16,7 @@
   <a href="index.html">Home</a>
   <a href="whatIsSound.html">What Is Sound</a>
   <a href="soundAbsorbtion.html">Sound Absorption</a>
+  <a href="materials.html">Materials</a>
   <hr>
   <p>What is sound, Really? Well ask no more in this pace we will go over the properties of sound in both a mathicical sense, and in a biological sense. We will top things out with how sound is affected by distance.</p>
   <hr>
