--- a/soundAbsorbtion.html
+++ b/soundAbsorbtion.html
@@ -16,6 +16,8 @@
   <a href="whatIsSound.html">What Is Sound</a>
   <a href="soundAbsorbtion.html">Sound Absorption</a>
   <a href="materials.html">Materials</a>
+  <a href="RoomShape.html">Room Shapes</a>
+  <a href="RealWorld.html">Real World Examples</a>
   <hr>
   <p>How does sound interact with other things? How can we get rid of sound? Why do we need to get rid of sound? All this and more ahead.</p>
   <hr>
