--- a/whatIsSound.html
+++ b/whatIsSound.html
@@ -17,6 +17,8 @@
   <a href="whatIsSound.html">What Is Sound</a>
   <a href="soundAbsorbtion.html">Sound Absorption</a>
   <a href="materials.html">Materials</a>
+  <a href="RoomShape.html">Room Shapes</a>
+  <a href="RealWorld.html">Real World Examples</a>
   <hr>
   <p>What is sound, Really? Well ask no more in this pace we will go over the properties of sound in both a mathicical sense, and in a biological sense. We will top things out with how sound is affected by distance.</p>
   <hr>
