--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
   <a href="whatIsSound.html">What Is Sound</a>
   <a href="soundAbsorbtion.html">Sound Absorption</a>
   <a href="materials.html">Materials</a>
+  <a href="RoomShape.html">Room Shapes</a>
+  <a href="RealWorld.html">Real World Examples</a>
   <hr>
   <p>  Welcome to the world of accousics. I hope to teach you all about sound. Including but not limited to how it works, how it affects different materials, and how it is affeced by different materials. You can click on any of the hyperlinks at the top to go to the different pages of my website. So, what are you waiting for. Cant wait to teach you about sound, see you one the other pages.</p>
 </body>
